--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node server/scripts/seedDestinations.js",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "promote-admin": "node server/scripts/promoteAdmin.js"
   },
   "keywords": [],
   "author": "",
