Implement image upload for admin panel and fix favorites functionality
- Add multer for handling image uploads to public/img folder
- Create separate upload-image endpoint for admin
- Fix route ordering (specific routes before parameterized routes)
- Update admin form to use file input instead of text input
- Add image preview functionality
- Fix favorites initialization to show hearts for all users
- Add defensive handling for null destinationId in favorites
- Improve error logging and validation
- Install missing nodemailer dependency
- Secure admin page to prevent unauthorized access flash

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10"
   },
   "eslintConfig": {
     "env": {
